@@ -1,5 +1,8 @@
 2014-08-08  Carl Hetherington  <cth@carlh.net>
 
+	* Approximate support for changing timing details of multiple
+	bits of content at the same time.
+
 	* Allow removal of multiple bits of content at the same time.
 
 	* Version 1.72.7 released.
